# shopify-domain-detector

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-07-analytics-detector-migration.md  2026-06-07-epic-overview.md  2026-06-07-shopify-checker.md  2026-06-07-shopify-domain-detector.md
examples/: basic.py
src/shopify_domain_detector/: __init__.py  cli.py  detector.py  domains.py  http.py  models.py  signatures.py  subdomains.py
tests/: test_categorize.py  test_classify_domain.py  test_cli.py  test_domains.py  test_http.py  test_models.py  test_parity.py  test_signatures.py  test_smoke.py  test_subdomains.py
