[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shopify-domain-detector"
version = "0.3.0"
description = "Detect whether a web domain is a live Shopify store — dependency-free, fast, redirect- and WAF-aware."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ahmed Omar" }]
keywords = ["shopify", "ecommerce", "domain", "detection", "store-detection", "lead-enrichment", "web-scraping", "platform-detection"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ahmedxomar101/shopify-domain-detector"
Repository = "https://github.com/ahmedxomar101/shopify-domain-detector"
Issues = "https://github.com/ahmedxomar101/shopify-domain-detector/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
shopify-detect = "shopify_domain_detector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shopify_domain_detector"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
